# Porker_Trainer

./: .gitignore  AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
tools/solver/: Cargo.toml  FORMAT.md  README.md  ci-merge.mjs  ci-plan.mjs
tools/solver/crates/precompute/: Cargo.toml
tools/solver/crates/precompute/src/: export.rs  main.rs  (+2 more)
tools/solver/crossvalidation/: turn_subgame_srp_btn_vs_bb.json
tools/solver/ranges/: bb_3bet_vs_btn.json  bb_3bet_vs_hj.json  bb_3bet_vs_utg.json  bb_call_vs_btn.json  bb_call_vs_co.json  bb_call_vs_hj.json  bb_call_vs_sb.json  bb_call_vs_utg.json  cc_btn_vs_co.json  cc_btn_vs_hj.json  cc_btn_vs_utg.json  cc_co_vs_hj.json  cc_co_vs_utg.json  cc_hj_vs_utg.json  defend_4bet_btn_vs_sb3bet.json  defend_4bet_co_vs_btn3bet.json  defend_4bet_utg_vs_btn3bet.json  defend_call_btn_vs_bb3bet.json  defend_call_btn_vs_sb3bet.json  defend_call_co_vs_btn3bet.json  defend_call_hj_vs_btn3bet.json  defend_call_hj_vs_co3bet.json  defend_call_utg_vs_btn3bet.json  rfi_btn.json  rfi_co.json  rfi_hj.json  rfi_sb.json  rfi_utg.json  threebet_btn_vs_co.json  threebet_btn_vs_hj.json  threebet_btn_vs_utg.json  threebet_sb_vs_btn.json
tools/solver/scenarios/: 3bet_btn_vs_bb.json  3bet_btn_vs_sb.json  3bet_co_vs_btn.json  3bet_hj_vs_btn.json  3bet_hj_vs_co.json  3bet_utg_vs_btn.json  srp_btn_vs_bb.json  srp_co_vs_bb.json  srp_co_vs_btn_cc.json  srp_hj_vs_bb.json  srp_hj_vs_btn_cc.json  srp_hj_vs_co_cc.json  srp_sb_vs_bb.json  srp_utg_vs_bb.json  srp_utg_vs_btn_cc.json  srp_utg_vs_co_cc.json  srp_utg_vs_hj_cc.json
(+189 files in other folders)
